# device_manager_app

./: .gitignore  INSTRUCTIONS.md  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/models/: device.rs  link.rs  mod.rs  node_edge_point.rs
backend/src/setup/: log_setup.rs  mod.rs
backend/tests/: device_test.rs  env_test.rs  link_test.rs  log_test.rs  test_errors.rs
frontend/: Cargo.toml  index.html
frontend/tests/: env_test.rs  example_test.rs
